samples/_failures_safe/1761280231_c70056_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cbc41c6.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9cbc41c6.c:148:16: error: expected expression at end of input
  148 |         struct MinHeapNode* node = extract_min(
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_9cbc41c6.c:148:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9cbc41c6.c:148:16: error: expected declaration or statement at end of input
